Fix spacing of controls in bed verification page

--- a/app/frontend/stylesheets/limber/screen.scss
+++ b/app/frontend/stylesheets/limber/screen.scss
@@ -234,10 +234,6 @@ nav.robots-list {
 .plate-view-control {
   margin: 18px 0;
 }
-// Keeps the labels in the bed scanner the same width.
-.bed-scanner label {
-  width: 15%;
-}
 
 // Bootstrap alerts have a bottom margin of 1rem, which looks
 // a little silly in our card stack.
